frontend cors added

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -167,7 +167,8 @@
 /* ===========================
    CONFIGURATION
 =========================== */
-const API_URL = 'http://localhost:3000';
+const API_URL = 'https://sampada-tours-and-travels-1-ssbm.onrender.com';
+
 
 /* ===========================
    UTILITY FUNCTIONS
