--- a/frontend/login.html
+++ b/frontend/login.html
@@ -244,7 +244,7 @@ document.getElementById("loginForm").addEventListener("submit", async (e) => {
   setLoadingState(true);
 
   try {
-    const res = await fetch("http://localhost:3000/login", {
+      const res = await fetch("https://sampada-tours-and-travels-1-ssbm.onrender.com/login", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ email, password }),
