fx frontend api urls

--- a/frontend/book-car.html
+++ b/frontend/book-car.html
@@ -148,7 +148,9 @@
 /* ===========================
    CONFIGURATION
 =========================== */
-const API_URL = 'http://localhost:3000';
+const API_URL = 'https://sampada-tours-and-travels-ood6.onrender.com';
+
+
 
 /* ===========================
    AUTHENTICATION STATE MANAGEMENT
