--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -78,7 +78,9 @@
 </footer>
 
 <script>
-const API = 'http://localhost:3000';
+const API = 'https://sampada-tours-and-travels-ood6.onrender.com';
+
+
 const form = document.getElementById('feedbackForm');
 const alertBox = document.getElementById('alertBox');
 
