--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -112,7 +112,9 @@
 </footer>
 
 <script>
-const API = 'http://localhost:3000';
+const API = 'https://sampada-tours-and-travels-ood6.onrender.com';
+
+
 const form = document.getElementById('bookingForm');
 const tourSelect = document.getElementById('tourSelect');
 const customFields = document.getElementById('customFields');
