--- a/frontend/tours.html
+++ b/frontend/tours.html
@@ -146,7 +146,7 @@
 <script>
 document.addEventListener("DOMContentLoaded", () => {
 
-  const token = localStorage.getItem("token");
+  const token = localStorage.getItem("authToken");
   const username = localStorage.getItem("username");
 
   const loginBtn = document.getElementById("loginBtn");
@@ -166,7 +166,7 @@ document.addEventListener("DOMContentLoaded", () => {
       `;
 
       document.getElementById("logoutBtn").addEventListener("click", () => {
-        localStorage.removeItem("token");
+        localStorage.removeItem("authToken");
         localStorage.removeItem("username");
         alert("You have been logged out.");
         window.location.href = "index.html";
