added auth location in script (frontend code)

--- a/frontend/car-rentals.html
+++ b/frontend/car-rentals.html
@@ -192,7 +192,7 @@
 </footer>
 
 <!-- Central Auth Script -->
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     AUTH.updateAuthUI();
