--- a/frontend/register.html
+++ b/frontend/register.html
@@ -103,7 +103,7 @@
 </footer>
 
 <!-- Central Auth -->
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
