--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -111,7 +111,7 @@
 </footer>
 
 <!-- Central Auth Script -->
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
