--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -77,7 +77,7 @@
 </footer>
 
 <!-- Central Auth Script -->
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
