--- a/frontend/login.html
+++ b/frontend/login.html
@@ -92,7 +92,7 @@
 </footer>
 
 <!-- Central Auth Script -->
-<script src="js/auth.js"></script>
+<script src="auth.js"></script>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
